--- a/main.ipynb
+++ b/main.ipynb
@@ -528,7 +528,7 @@
     "# pixels\n",
     "Pixels          = [data['pixels'][q] for q in id_sel]\n",
     "# titles \n",
-    "titles          = [\"Histogramme de pixellisation\", \"Nombre de plantes par espèce\"]\n",
+    "titles          = [\"Histogramme de pixelisation\", \"Nombre de plantes par espèce\"]\n",
     "# xlabels \n",
     "xlabel          = [\"Pixels (Mpx)\", \"Encodage\"]\n",
     "# ylabels \n",
